service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  tags:
    app: wordpress
specs:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: wordpress
